<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/represent"
        android:layout_width="408dp"
        android:layout_height="223dp"
        android:ems="10"
        android:gravity="bottom"
        android:inputType="number"
        android:minHeight="48dp"
        android:text="noot noot"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.031" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="101dp"
        android:layout_height="441dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/represent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/multiply"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/white_circle_svg"

            android:onClick="multButton"
            android:text="@string/multiply"
            android:textSize="20sp"
            app:backgroundTint="@color/button_math"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divide" />

        <Button
            android:id="@+id/minus"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="16dp"

            android:background="@drawable/white_circle_svg"
            android:onClick="minusButton"
            android:text="@string/minus"
            android:textSize="20sp"
            app:backgroundTint="@color/button_math"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/multiply" />

        <Button
            android:id="@+id/plus"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="16dp"

            android:background="@drawable/white_circle_svg"
            android:onClick="plusButton"
            android:text="@string/plus"
            android:textSize="20sp"
            app:backgroundTint="@color/button_math"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/minus" />

        <Button
            android:id="@+id/equal"
            android:layout_width="70dp"
            android:layout_height="70dp"

            android:background="@drawable/white_circle_svg"
            android:text="@string/equal"
            android:textSize="20sp"
            app:backgroundTint="@color/button_math"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plus" />

        <Button
            android:id="@+id/divide"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/white_circle_svg"
            android:onClick="divideButton"

            android:text="@string/divide"
            android:textSize="20sp"
            app:backgroundTint="@color/button_math"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="292dp"
        android:layout_height="253dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
        app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4"
        app:layout_constraintVertical_bias="0.384">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="291dp"
        android:layout_height="71dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
        app:layout_constraintHorizontal_bias="0.692"
        app:layout_constraintStart_toStartOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout4"
        android:layout_width="297dp"
        android:layout_height="98dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/represent">

        <Button
            android:id="@+id/divide2"
            android:layout_width="245dp"
            android:layout_height="70dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/_4_445550_pill_shape_png_skateboard_deck_clipart"

            android:onClick="allClearButton"
            android:text="@string/AC"
            android:textSize="20sp"
            app:backgroundTint="@color/button_math"
            app:iconSize="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>